fix gap

--- a/pages/main/styles/_variables.scss
+++ b/pages/main/styles/_variables.scss
@@ -13,3 +13,4 @@ $color-light-xl: #ffffff;
 $color-primary-light: #fddcc4;
 $breakpoint-tablet: 769px+334px;
 $breakpoint-mobile: 320px + 250px;
+$breakpoint-decktop: 1280px;
